<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/list_container"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginEnd="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewUsers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_panel"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/editFPInfo"/>

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/deleteFP" />

        <Button
            android:id="@+id/buttonImport"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/importDB"/>

        <Button
            android:id="@+id/buttonExport"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/exportDB" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonClose"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/btnClose" />
    </LinearLayout>

</LinearLayout>